--- a/style.css
+++ b/style.css
@@ -12,11 +12,17 @@ body {
 header {
   height: 200px;
   width: 100%;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+}
+
+main {
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-around;
 }
 
 footer {
@@ -28,10 +34,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-a {
-  text-decoration: none;
+  flex-wrap: nowrap;
+  overflow: hidden;
 }
 
 h1 {
@@ -63,17 +67,20 @@ p{
   line-height: 1.5em;
 }
 
+a, a:visited {
+  text-decoration: none;
+  color: rgb(172, 0, 0);
+}
+
+a:hover {
+  color: rgb(255, 46, 46);
+}
+
 .container {
   margin: 0 auto;
   max-width: 1024px;
   background-color: rgba(255, 255, 255, 0.459);
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-
-main {
-  padding: 0 20px;
-  display: flex;
-  justify-content: space-around;
 }
 
 .wrapper-left,
@@ -104,6 +111,15 @@ main {
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
 
+.wrapper-left li {
+  margin-left: 15px;
+}
+
+.wrapper-left img {
+  width: calc(90% - 15px);
+  max-width: 350px;
+  height: auto;
+}
 
 .wrapper-right {
   width: 30%;
@@ -114,7 +130,7 @@ main {
   font-style: italic;
 }
 
-img {
+.wrapper-right img {
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
   width: 100%;
